# TCC_Pro

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  execute_plan.md
src/: main.cpp
src/ast/: ast.cpp  ast_dumper.cpp  ast_dumper.hpp  decl.hpp  expr.hpp  node.hpp  stmt.hpp
src/codegen/: backend.cpp  backend.hpp  x86_backend.cpp  x86_backend.hpp
src/common/: arena.cpp  arena.hpp  compiler_context.cpp  compiler_context.hpp  diagnostics.cpp  diagnostics.hpp  source_location.hpp  string_interner.cpp  string_interner.hpp
src/driver/: driver.cpp  driver.hpp
src/ir/: ir.cpp  ir.hpp  ir_gen.cpp  ir_gen.hpp
src/lex/: lexer.cpp  lexer.hpp  token.cpp  token.hpp
src/parse/: parser.cpp  parser.hpp
src/sema/: sema.cpp  sema.hpp
src/symbol/: symbol.cpp  symbol.hpp
src/type/: type.cpp  type.hpp
tests/: run_equivalence.sh
tests/cases/: arithmetic.c  control_do.c  control_switch.c  enums.c  floats.c  hello.c  pointers.c
tests/cases/cases/: arrays.c  control_for.c  control_goto.c  control_if.c  control_while.c  func.c  func_recursion.c  strings.c  structs.c  typedefs.c  unions.c
tests/expected/: arithmetic.stdout  control_if.stdout
tests/expected/expected/: arrays.stdout
